[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/base.png" type="Texture" id=1]
[ext_resource path="res://Instatiables/Mouse.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/icons-controller-16x16-1bit-ansdor.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Criador.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 176, 64, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 160, 64, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 240.0 ]
}

[node name="Base" type="Sprite" parent="."]
self_modulate = Color( 0.488147, 0.096817, 0.917969, 1 )
position = Vector2( 320, 184 )
scale = Vector2( 5.8125, 5.8125 )
texture = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 312, 104 )
scale = Vector2( 10, 10 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = 192.0
margin_top = 256.0
margin_right = 448.0
margin_bottom = 320.0
color = Color( 0.219608, 0.219608, 0.219608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Mouse" parent="CanvasLayer" instance=ExtResource( 2 )]
z_index = 10

[node name="Right" type="Button" parent="CanvasLayer"]
margin_left = 544.0
margin_top = 88.0
margin_right = 608.0
margin_bottom = 152.0
custom_styles/hover = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right_arrow" type="AnimatedSprite" parent="CanvasLayer/Right"]
modulate = Color( 0.8, 0.8, 0.8, 1 )
position = Vector2( 32, 32 )
scale = Vector2( 5, 5 )
z_index = -1
frames = SubResource( 2 )

[node name="Left" type="Button" parent="CanvasLayer"]
margin_left = 32.0
margin_top = 88.0
margin_right = 96.0
margin_bottom = 152.0
custom_styles/hover = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left_arrow" type="AnimatedSprite" parent="CanvasLayer/Left"]
modulate = Color( 0.8, 0.8, 0.8, 1 )
position = Vector2( 32, 32 )
scale = Vector2( 5, 5 )
frames = SubResource( 4 )

[node name="Criar" type="Button" parent="CanvasLayer"]
margin_left = 192.0
margin_top = 256.0
margin_right = 448.0
margin_bottom = 320.0
custom_styles/hover = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
text = "Create"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="CanvasLayer/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="CanvasLayer/Criar" to="." method="_on_Criar_pressed"]
